bug 767742 - close spdy sessions under total connection pressure r=honzab